--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-	<div class="container">
+	
 		<div class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
 				<a class="navbar-brand" href="#">Treebook
@@ -17,6 +17,9 @@
 				</ul>
 			</div>
 		</div>
+	<div class="container">
+		<p class="notice"><%= notice %></p>
+       	<p class="alert"><%= alert %></p>
 		<%= yield %>
 	</div>
 </body>
