--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,5 +16,22 @@
 
 /* Layout*/
 body {
-	padding-top: 60px;
+	padding-top: 55px;
+}
+
+.alert {
+	padding:0;
+}
+
+#new_user > fieldset > .control-group {
+	padding:5px;
+}
+
+
+input {
+	display:block;width:100%;height:34px;padding:6px 12px;font-size:14px;line-height:1.42857143;color:#555;background-color:#fff;background-image:none;border:1px solid #ccc;border-radius:4px;-webkit-box-shadow:inset 0 1px 1px rgba(0,0,0,.075);;box-shadow:inset 0 1px 1px rgba(0,0,0,.075);-webkit-transition:border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;-o-transition:border-color ease-in-out .15s,box-shadow ease-in-out .15s;transition:border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+
+input.btn {
+	margin-top: 10px;
 }
