--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,27 +1,31 @@
-<h2>Sign up</h2>
+<div class="row">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+  <div class="col-sm-4">
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "well"}) do |f| %>
+    <%= devise_error_messages! %>
 
-  	<div><%= f.label :first_name %> <br/>
-  	<%= f.text_field :first_name%></div>
+    <legend>Register</legend>
 
-  	<div><%= f.label :last_name %> <br/>
-  	<%= f.text_field :last_name%></div>
+      <fieldset class="f reg">
 
-  	<div><%= f.label :profile_name %> <br/>
-  	<%= f.text_field :profile_name%></div>
+        <%= f.input :first_name, html: {class: "form-control"} %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+        <%= f.input :last_name %>
 
-  <div><%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
+        <%= f.input :profile_name %>
 
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+        <%= f.input :email %>
 
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
+        <%= f.input :password, autocomplete: :off %>
 
-<%= render "devise/shared/links" %>
+        <%= f.input :password_confirmation %>
+
+        <%= f.button :submit, "Log in" %>
+
+      </fieldset>
+    <% end %>
+
+    <%= render "devise/shared/links" %>
+  </div>
+  <div class="col-sm-8"><h2>Registering in is easy and secure</h2></div>
+</div>
